--- a/scss/main.scss
+++ b/scss/main.scss
@@ -114,6 +114,7 @@ h1.end {
     transition: 0.2s ease-in-out;
   }
 
+  //   When input is valid -> style label
   input:valid + #input-label {
     top: 6px;
     left: 42px;
